Fix bug with visiblity hidden and focus state of select

--- a/css/core-ui-select.css
+++ b/css/core-ui-select.css
@@ -39,7 +39,8 @@
     width: 1px !important;
     text-indent: -9999px;
     overflow: hidden;
-    visibility: hidden;
+    opacity: 0;
+    filter: alpha(opacity = 0);
 }
 
 .b-core-ui-select:HOVER {
